This document details changes for TinyMUSH 3 "mainline" releases, 
as well as bugfix updates issued against those mainline releases.

For changes between beta versions, consult the BETA document. 

=============================================================================
			TinyMUSH 3.1 Changes
=============================================================================

TinyMUSH 3.1 beta 1 was released on May 8th, 2002.
The "full", gamma release of TinyMUSH 3.1 is dated June 21st, 2004.

-----------------------------------------------------------------------------

PATCHES SINCE THE 3.1 RELEASE

3.1 Patchlevel 6 -- January 12th, 2009

  - Enhancement: A "reply" command allows you to reply to a page, including
    being able to reply to the whole group of people paged along with you.

  - Enhancement: Property directories (propdirs) offer the ability to
    inherit attributes from multiple objects. If an object's parent chain
    does not contain an attribute, the object's @propdir list is searched
    for that attribute.

  - A new special @hook, internalgoto, has been added. This offers the
    ability to execute a hook on any type of movement, regardless of the
    reason, with the before-hook executed before leaving a location, and
    the after-hook executed when entering a location.

  - Enhancement: The new /private switch to @function makes the register
    environment of the called function private, ala uprivate() -- i.e.,
    no registers are passed in, and any changes made to registers by the
    function are discarded.

  - Enhancement: The new /private switch to @hook makes the register
    environment of the called hook private.

  - Enhancement: PennMUSH-style #lamba anonymous functions are supported,
    allowing functions like map() to take a string to execute rather than
    requiring it to reside on an attribute.

  - Enhancement: The iter() family has been extended -- iter2(), list2(),