@@ -1,2 +1,2 @@
 Do not edit this file. Correct operation of patches depends upon it.
-The current version is: TinyMUSH 3.1 patchlevel 6
+The current version is: TinyMUSH 3.2 beta 1
