@@ -6,9 +6,9 @@
 #ifndef __PATCHLEVEL_H
 #define __PATCHLEVEL_H
 
-#define	MUSH_VERSION		"3.1"		/* Base version number */
-#define PATCHLEVEL		6		/* Patchlevel or beta number */
-#define	MUSH_RELEASE_DATE	"01/12/2009"	/* Source release date */
-#define MUSH_RELEASE_STATUS	0		/* 0 gamma, 1 beta, 2 alpha */
+#define	MUSH_VERSION		"3.2"		/* Base version number */
+#define PATCHLEVEL		1		/* Patchlevel or beta number */
+#define	MUSH_RELEASE_DATE	"02/23/2009"	/* Source release date */
+#define MUSH_RELEASE_STATUS	1		/* 0 gamma, 1 beta, 2 alpha */
 
 #endif /* __PATCHLEVEL_H */
