@@ -4,6 +4,13 @@ as well as bugfix updates issued against those mainline releases.
 For changes between beta versions, consult the BETA document. 
 
 =============================================================================
+			TinyMUSH 3.2 Changes
+=============================================================================
+
+TinyMUSH 3.2 beta 1 was released on February 23rd, 2009.
+See the BETA file for details.
+
+=============================================================================
 			TinyMUSH 3.1 Changes
 =============================================================================
 
